# openapi/api.yaml
@@ -1382,6 +1382,15 @@ components:
       allOf:
         -  $ref: '#/components/schemas/StageField'
         -  $ref: '#/components/schemas/MilestoneSetField'
+    VerifyContinuityIssueResponse:
+      type: object
+      properties:
+        verification_status:
+          type: boolean
+        verification_failure_reason:
+          type: string
+        launch_issue_id:
+          type: integer
     CreateLaunchIssueRequest:
       type: object
       properties:
